# face-detection-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/test_images/: README.md
include/: face_detector.hpp
scripts/: generate_test_images.py
src/: face_detector.cpp  main.cpp
tests/: face_detector_test.cpp
